--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -627,21 +627,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Line' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-71-05254f68eeb8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mHTML\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mleft_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mright_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Line' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import everything needed to edit/save/watch video clips\n",
     "from moviepy.editor import VideoFileClip\n",
@@ -671,7 +659,7 @@
     "        self.ally = None\n",
     "        \n",
     "    def add_candidate_line(self, ):\n",
-    "        \n",
+    "        pass\n",
     "        \n",
     "def pipeline(img):\n",
     "    undist_img = undist(img)\n",
@@ -685,6 +673,9 @@
     "    \n",
     "    left_fitx = left.bestx\n",
     "    right_fitx = right.bestx\n",
+    "    \n",
+    "    ploty = np.linspace(0, img.shape[0]-1, img.shape[0])\n",
+    "    result = draw_lane_line(img, left_fitx, right_fitx, ploty)\n",
     "    \n",
     "    return result\n",
     "    \n",
