--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -627,20 +627,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import everything needed to edit/save/watch video clips\n",
     "from moviepy.editor import VideoFileClip\n",
     "from IPython.display import HTML\n",
+    "from collections import deque\n",
     "\n",
     "class Line():\n",
     "    def __init__(self):\n",
     "        # was the line detected in the last iteration?\n",
     "        self.detected = False  \n",
     "        # x values of the last n fits of the line\n",
-    "        self.recent_xfitted = [] \n",
+    "        self.recent_xfitted = deque([],maxlen=5) \n",
+    "        \n",
+    "        self.recent_fitted = deque([],maxlen=5)\n",
     "        #average x values of the fitted line over the last n iterations\n",
     "        self.bestx = None     \n",
     "        #polynomial coefficients averaged over the last n iterations\n",
@@ -657,15 +660,81 @@
     "        self.allx = None  \n",
     "        #y values for detected line pixels\n",
     "        self.ally = None\n",
+    "    \n",
+    "    def set_diffs(self):\n",
+    "        if len(self.recent_xfitted) > 0:\n",
+    "            self.diffs = self.current_fit - self.best_fit\n",
+    "        else:\n",
+    "            self.diffs = np.array([0,0,0], dtype='float')    \n",
+    "            \n",
+    "    def set_line_pos_pos(self):\n",
+    "        y_max = 720\n",
+    "        line_pos = self.current_fit[0]*y_max**2 + self.current_fit[1]*y_max + self.current_fit[2]\n",
+    "        center_pos = 640\n",
+    "        self.line_base_pos =(line_pos - center_pos)*3.7/600.0 # 3.7 meters is about 600 pixels       \n",
+    "    \n",
+    "    def sanity_check(self):\n",
+    "        flag = True\n",
+    "        lane_width  = 3.7\n",
+    "        if(abs(self.line_base_pos)*2 > lane_width*1.1 or\n",
+    "           abs(self.line_base_pos)*2 < lane_width*0.9): # between +-10%(0.37)\n",
+    "            print('lane too width or narrow')\n",
+    "            flag  = False\n",
+    "            \n",
+    "        if(len(self.recent_xfitted) > 0):\n",
+    "            fit_delta = self.diffs / self.best_fit\n",
+    "            if not (abs(fit_delta) < np.array([0.7,0.5,0.15])).all():\n",
+    "                print('fit change too much [%]', fit_delta)\n",
+    "                flag=False\n",
+    "\n",
+    "        return flag        \n",
+    "\n",
+    "\n",
+    "    def add_line(self):\n",
+    "        yvals = np.linspace(0, 100, num=101)*7.2\n",
+    "        current_fit_xvals = self.current_fit[0]*yvals**2 + self.current_fit[1]*yvals + self.current_fit[2]\n",
+    "        self.recent_xfitted.appendleft(current_fit_xvals)\n",
     "        \n",
-    "    def add_candidate_line(self, ):\n",
-    "        pass\n",
+    "        self.recent_fitted.appendleft(self.current_fit)\n",
     "        \n",
+    "    def set_bestx(self):\n",
+    "        fits = self.recent_xfitted\n",
+    "        if len(fits)>0:\n",
+    "            avg=0\n",
+    "            for fit in fits:\n",
+    "                avg +=np.array(fit)\n",
+    "            avg = avg / len(fits)\n",
+    "            self.bestx = avg\n",
+    "            \n",
+    "    def set_bestfit(self):\n",
+    "        recent_fitted = self.recent_fitted\n",
+    "        if len(recent_fitted)>0:\n",
+    "            avg=0\n",
+    "            for fit in recent_fitted:\n",
+    "                avg +=np.array(fit)\n",
+    "            avg = avg / len(recent_fitted)\n",
+    "            self.bestfit = avg\n",
+    "            \n",
+    "    def add_candidate_line(self, lanex, laney):\n",
+    "        self.allx = lanex\n",
+    "        self.ally = laney\n",
+    "        self.current_fit = np.polyfit(lanex, laney, 2)\n",
+    "        self.diffs = self.set_diffs()\n",
+    "        self.set_line_pos_pos()    \n",
+    "        \n",
+    "        if self.sanity_check():\n",
+    "            self.detected = True\n",
+    "            self.add_line()\n",
+    "            self.set_bestx()\n",
+    "            self.set_bestfit() \n",
+    "        else:\n",
+    "            self.detected=False\n",
+    "            \n",
+    "            \n",
     "def pipeline(img):\n",
     "    undist_img = undist(img)\n",
     "    threshold_img = threshold(undist_img)\n",
     "    perspective_img = perspective(threshold_img)\n",
-    "    \n",
     "    leftx, lefty, rightx, righty = get_lane_lines(perspective_img)\n",
     "    \n",
     "    left_line.add_candidate_line(leftx, lefty)\n",
@@ -675,13 +744,18 @@
     "    right_fitx = right.bestx\n",
     "    \n",
     "    ploty = np.linspace(0, img.shape[0]-1, img.shape[0])\n",
+    "    \n",
+    "    # we only need y from 0..720 and the response x to draw a line\n",
     "    result = draw_lane_line(img, left_fitx, right_fitx, ploty)\n",
     "    \n",
     "    return result\n",
     "    \n",
     "left_line = Line()\n",
     "right_line = Line()\n",
-    "\n"
+    "\n",
+    "result = pipeline(img)\n",
+    "\n",
+    "plt.imshow(result)\n"
    ]
   },
   {
